@@ -1,6 +1,6 @@
 *PPD-Adobe: "4.3"
 *%
-*% "$Id: epson24.ppd,v 1.3.2.1 2002/01/02 18:04:55 mike Exp $"
+*% "$Id: epson24.ppd,v 1.3.2.2 2002/10/15 14:42:37 mike Exp $"
 *%
 *%   Sample EPSON 24-Pin driver PPD file for the Common UNIX Printing
 *%   System (CUPS).
@@ -44,7 +44,7 @@
 *FileSystem:	False
 *Throughput:	"1"
 *LandscapeOrientation: Plus90
-*VariablePaperSize: False
+*VariablePaperSize: True
 *TTRasterizer:	Type42
 
 *OpenUI *PageSize/Media Size: PickOne
@@ -76,6 +76,16 @@
 *PaperDimension Legal:	"612 1008"
 *PaperDimension A4:	"595 842"
 *PaperDimension FanFoldUS: "1071 792"
+
+*MaxMediaWidth:  "1080"
+*MaxMediaHeight: "86400"
+*HWMargins:      0 0 0 0
+*CustomPageSize True: "pop pop pop <</PageSize[5 -2 roll]/ImagingBBox null>>setpagedevice"
+*ParamCustomPageSize Width:        1 points 36 1080
+*ParamCustomPageSize Height:       2 points 36 86400
+*ParamCustomPageSize WidthOffset:  3 points 0 0
+*ParamCustomPageSize HeightOffset: 4 points 0 0
+*ParamCustomPageSize Orientation:  5 int 0 0
 
 *OpenUI *Resolution/Output Resolution: PickOne
 *OrderDependency: 20 AnySetup *Resolution
@@ -124,5 +134,5 @@
 *Font ZapfChancery-MediumItalic: Standard "(001.007S)" Standard ROM
 *Font ZapfDingbats: Special "(001.004S)" Standard ROM
 *%
-*% End of "$Id: epson24.ppd,v 1.3.2.1 2002/01/02 18:04:55 mike Exp $".
+*% End of "$Id: epson24.ppd,v 1.3.2.2 2002/10/15 14:42:37 mike Exp $".
 *%
